--- a/styles/style.css
+++ b/styles/style.css
@@ -1,36 +1,137 @@
 html {
     font-size: 15px; 
     /* px means "pixels": the base font size is now 10 pixels high */
-    font-family: "Montserrat", sans-serif; 
+    font-family: "Montserrat", sans-serif;
     /* this should be the rest of the output you got from Google Fonts */
-    background-color: #8db7de;
+    background-color: #852859;
   }
 
-  p, li {
-    color: #190baf;
+  p {
+    color: #dacfde;
     font-size: 16px;
     line-height: 2;
     letter-spacing: 1px;
   }
-
   h1 {
-    font-size: 60px;
+    font-size: 70px;
+    font-family: 'Pacifico', cursive;
+    text-align: left;
+    margin: 0;
+    padding: 20px 0;
+    color: #c0139d;
+    text-shadow: 3px 3px 1px rgb(133, 11, 47);
+  }
+  h2 {
+    font-size: 45px;
     text-align: center;
     margin: 0;
     padding: 20px 0;
-    color: #0e0068;
-    text-shadow: 3px 3px 1px rgb(8, 23, 72);
+    color: #c0139d;
+    text-shadow: 3px 3px 1px rgb(133, 11, 47);
   }
   
   body {
-    width: 600px;
+    width: 1200px;
     margin: 15px auto;
-    background-color: #1adf8d;
+    background-color: #AD8498;
     padding: 0 20px 20px 20px;
-    border: 5px solid rgb(24, 133, 222);
+    border: 5px solid #C7508F;
   }
 
-  img {
+  #couple-images {
     display: block;
     margin: 0 auto;
   }
+
+  .logo {
+    display: block;
+    width: 1000 px;
+    height: 300 px;
+  }
+
+  header, nav, main, aside, footer, article, section {
+    display: block;
+  }
+
+  /* ------------------------CZĘŚĆ-GÓRNA-MENU------------------------ */
+
+      /* wygląd głównego elementu - ol */
+      ol {
+        list-style-type:none;
+        padding:0;
+        margin:0;
+        background-color:#FFF;
+        font-size:18px;
+        height:2em;
+        line-height:2em;
+        text-align:center;
+        width:1199px;
+      }
+
+      /* wygląd wszystkich elementów - a - znajdujących się w elemencie - ol */
+      ol a {
+        display:block;
+        text-decoration:none;
+        color:#000;
+        padding:0 5px;
+      }
+
+      /* wygląd elementów - li - wszystkich dzieci elementu - ol */
+      ol > li {
+        float:left;
+        width:239px;
+        margin-left:1px;
+        background-color:#C7508F;
+        height:2em;
+      }
+
+      /* wygląd elementu - li - pierwszego dziecka elementu - ol */
+      ol > li:first-child {
+        margin-left:0;
+      }
+
+      /* wygląd elementów - li - wszystkich dzieci elementu - ol - po najechaniu kursorem myszki na element - li */
+      ol > li:hover {
+        background-color:#EEE;
+      }
+
+      /* wygląd elementu - a - dziecka elementu - li - będącego dzieckiem elementu - ol - po najechaniu kursorem myszki na element - li */
+      ol > li:hover > a {
+        color:rgb(223, 135, 205);
+      }
+
+      /* wygląd elementu - ul - dziecka elementu - li - będącego dzieckiem elementu - ol - po najechaniu kursorem myszki na element - li */
+      ol > li:hover > ul {
+        display:block;
+      }
+
+      /* ------------------------CZĘŚĆ-ROZWIJANA-MENU------------------------ */
+
+      /* wygląd głównych rozwijanych elementów - ul */
+      ol > li > ul {
+        display:none;
+        list-style-type:none;
+        padding:0;
+        margin:0;
+      }
+
+      /* wygląd elementu - li - w części rozwijanej */
+      ol > li > ul > li {
+        position:relative;
+        background-color:#EEE;
+      }
+
+      /* wygląd elementu - a - w części rozwijanej */
+      ol > li > ul > li > a {
+        border-top:1px solid #FFF;
+      }
+
+      /* wygląd elementu - li - w części rozwijanej, po najechaniu kursorem myszki na dany element - li */
+      ol > li > ul > li:hover {
+        background-color:#DDD;
+      }
+
+      /* wygląd elementu - a - w części rozwijanej, po najechaniu kursorem myszki na element - li */
+      ol > li > ul > li:hover > a {
+        color:rgb(223, 135, 205);
+      }
